tests/parsing/parameter_defined_twice/stderr.golden
error: redeclaration of 'a' parameter
bus.fbd +1:17
   |
 1 | type my_mask(a, a) mask
   |                 ^
